# TestInteropVKGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-msvc.bat  build.sh  shell.nix  vcpkg.json
.github/workflows/: build-vcpkg.yml  release.yml
docs/license-libraries/graphics/: LICENSE-gl-headers.txt
src/: DiagramBase.cpp  DiagramBase.hpp  Main.cpp  MainApp.cpp  MainApp.hpp
